--- a/hardware.html
+++ b/hardware.html
@@ -41,7 +41,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="card ling col-12 col-md-4 col-lg-4 alterar2">
-                                <img src="gabinete.webp" class="card-img-top" alt="...">
+                                <img src="gabinete-1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Gabinete</h5>
                                     <p class="card-text">Confira aqui tudo o que precisa saber!</p>
@@ -49,7 +49,7 @@
                                 </div>
                             </div>
                             <div class="card ling col-12 col-md-4 col-lg-4 alterar2">
-                                <img src="placaa.webp" class="card-img-top" alt="...">
+                                <img src="placaa-1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Placa-Mãe</h5>
                                     <p class="card-text">Confira aqui tudo o que precisa saber!!</p>
@@ -57,7 +57,7 @@
                                 </div>
                             </div>
                             <div class="card ling col-12 col-md-4 col-lg-4 alterar2">
-                                <img src="videoo.webp" class="card-img-top" alt="...">
+                                <img src="videoo-1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Placa de Vídeo</h5>
                                     <p class="card-text">Confira aqui tudo o que precisa saber!!</p>
@@ -73,7 +73,7 @@
                                 </div>
                             </div>
                             <div class="card ling col-12 col-md-4 col-lg-4 alterar2">
-                                <img src="arma.webp" class="card-img-top" alt="...">
+                                <img src="arma-1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Armazenamento</h5>
                                     <p class="card-text">Confira aqui tudo o que precisa saber!</p>
@@ -81,7 +81,7 @@
                                 </div>
                             </div>
                             <div class="card ling col-12 col-md-4 col-lg-4 alterar2">
-                                <img src="proc.webp" class="card-img-top" alt="...">
+                                <img src="proc-1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Processador</h5>
                                     <p class="card-text">Confira aqui tudo o que precisa saber!!</p>
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                             <div class="card ling col-12 col-md-4 col-lg-4 alterar2">
-                                <img src="sddd.webp" class="card-img-top" alt="...">
+                                <img src="sddd-1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">SSD e HD</h5>
                                     <p class="card-text">Confira aqui tudo o que precisa saber!</p>
@@ -98,7 +98,7 @@
                             </div>
 
                             <div class="card ling col-12 col-md-4 col-lg-4 alterar2">
-                                <img src="cooleer.webp" class="card-img-top" alt="...">
+                                <img src="cooleer-1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Cooler e Sistemas de Resfriamentos</h5>
                                     <p class="card-text">Confira aqui tudo o que precisa saber!</p>
