--- a/c++.html
+++ b/c++.html
@@ -10,10 +10,13 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-    <header>
+     <div class="container">
+
+    <div class="header-card">
         <h1>Manual de TI</h1>
-        <h5>O guia definitivo para aprender as linguagens de programação</h5>
-    </header>
+        <p>Todos os recursos técnicos em um só lugar</p>
+        <button class="btn" onclick="modoEscuro()" id="textmode">Modo escuro</button>
+    </div>
 
      <div class="container">
         <h2 class="text-center mt-5">Tutorial de C++</h2>
@@ -202,9 +205,11 @@ meuCarro.mostrarInfo();</code></pre>
             </div>
         </div>
     </div>
+</div>
     <footer>
         <p>© 2025 - Central de TI</p>
         <p>Versão 2.0</p>
     </footer>
 </body>
+
 </html>
