--- a/linguagens.html
+++ b/linguagens.html
@@ -78,7 +78,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Linguagem PHP</h5>
                     <p class="card-text">Confira aqui tudo o que precisa <br>de PHP!</p>
-                    <a href="PHP.html" class="btn">Saiba mais</a>
+                    <a href="PHP(1).html" class="btn">Saiba mais</a>
                     </div>
             </div>
              <div class="card ling col-12 col-md-4 col-lg-4 alterar2">
