--- a/pagjogos.html
+++ b/pagjogos.html
@@ -8,10 +8,14 @@
   <link rel="stylesheet" href="pagjogos.css">
 </head>
 <body>
-  <header>
-    <h1>Manual do TI - Central de Jogos</h1>
-    <p>Escolha um dos testes abaixo e divirta-se aprendendo!</p>
-  </header>
+  <div class="container">
+
+    <div class="header-card">
+          <h1>Manual do TI - Central de Jogos</h1>
+            <p>Escolha um dos testes abaixo e divirta-se aprendendo!</p>
+        <button class="btn" onclick="modoEscuro()" id="textmode">Modo escuro</button>
+    </div>
+   
 
   <main class="fundo container">
     <div class="row g-4">
@@ -90,7 +94,7 @@
 
     </div>
   </main>
-
+  </div>
   <footer>
     <p>&copy; 2025 - Manual do TI</p>
   </footer>
@@ -98,3 +102,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
