--- a/C.html
+++ b/C.html
@@ -6,6 +6,7 @@
     <title>Code Master - Aprenda Linguagens de Programação</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="linguagens.css">
+     <script src="linguagens.js"></script>
 
 </head>
 <body>
@@ -196,3 +197,4 @@ printf("Valor: %d\n", *ptr); // Acessa o valor através do ponteiro
 </body>
 
 </html>
+
