--- a/loja.html
+++ b/loja.html
@@ -61,7 +61,7 @@
         </div>
       
         <div class="card col-12 col-md-6 col-lg-4 alterar2">
-          <img src="cooler-1.webp" class="card-img-top" alt="...">
+          <img src="cooleer-1.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Ventoinha Rise Mode Galaxy Led, 120mm, Branco - RM-FN-01-BW</h5>
             <p class="card-text">R$15,00</p>
