--- a/C.html
+++ b/C.html
@@ -9,7 +9,7 @@
      <script src="linguagens.js"></script>
 
 </head>
-<body>
+<body class="alterar">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <div class="container">
 
@@ -21,7 +21,7 @@
 
      <div class="container">
         <h2 class="text-center mt-5">Tutorial de Linguagem C</h2>
-        <div class="card">
+        <div class="card alterar2">
             <div class="card-body">
             <div>
                 <h3>O que é Linguagem C?</h3>
@@ -34,7 +34,7 @@
                     <li>Núcleo de outras linguagens</li>
                 </ul>
                   <h3>Estrutura Básica de um Programa C</h3>
-                <pre class="bg-light p-3">
+                <pre class=" alterar2">">
                 <code>
 #include &lt;stdio.h&gt;
 
@@ -84,13 +84,13 @@ int main() {
                 </table>
                  <h3>Variáveis e Constantes</h3>
                 <p>Declaração de variáveis:</p>
-                <pre class="bg-light p-3"><code>int idade = 25;
+                <pre class=" alterar2">"><code>int idade = 25;
 float altura = 1.75f;
 char inicial = 'J';
 int programador = 1; // 1 para true, 0 para false</code></pre>
 
                 <p>Constantes (valores que não mudam):</p>
-                <pre class="bg-light p-3"><code>#define PI 3.14159
+                <pre class=" alterar2">"><code>#define PI 3.14159
 const int DIAS_SEMANA = 7;</code></pre>
                 <h3>Operadores</h3>
                 <h4>Operadores Aritméticos</h4>
@@ -112,13 +112,13 @@ const int DIAS_SEMANA = 7;</code></pre>
                 </ul>
                 <h4>Condicionais</h4>
                 <p>if-else:</p>
-                <pre class="bg-light p-3"><code>if (idade >= 18) {
+                <pre class=" alterar2">"><code>if (idade >= 18) {
     printf("Maior de idade\n");
 } else {
     printf("Menor de idade\n");
 }</code></pre>
 <p>switch-case:</p>
-                <pre class="bg-light p-3"><code>switch(dia) {
+                <pre class=" alterar2">"><code>switch(dia) {
     case 1: printf("Domingo\n"); break;
     case 2: printf("Segunda\n"); break;
     // ...
@@ -127,18 +127,18 @@ const int DIAS_SEMANA = 7;</code></pre>
 
                 <h4>Loops</h4>
                 <p>for:</p>
-                <pre class="bg-light p-3"><code>for(int i = 0; i < 10; i++) {
+                <pre class=" alterar2">"><code>for(int i = 0; i < 10; i++) {
     printf("%d\n", i);
 }</code></pre>
 
                 <p>while:</p>
-                <pre class="bg-light p-3"><code>int i = 0;
+                <pre class=" alterar2">"><code>int i = 0;
 while(i < 10) {
     printf("%d\n", i);
     i++;
 }</code></pre>
  <p>do-while:</p>
-                <pre class="bg-light p-3"><code>int i = 0;
+                <pre class=" alterar2">"><code>int i = 0;
 do {
     printf("%d\n", i);
     i++;
@@ -146,7 +146,7 @@ do {
 
                 <h3>Funções</h3>
                 <p>Funções permitem organizar e reutilizar código:</p>
-                <pre class="bg-light p-3"><code>// Declaração
+                <pre class=" alterar2">"><code>// Declaração
 int soma(int a, int b) {
     return a + b;
 }
@@ -156,7 +156,7 @@ int resultado = soma(5, 3);
 printf("5 + 3 = %d\n", resultado);</code></pre>
   <h3>Arrays (Vetores)</h3>
                 <p>Armazenam múltiplos valores do mesmo tipo:</p>
-                <pre class="bg-light p-3"><code>int numeros[5] = {10, 20, 30, 40, 50};
+                <pre class=" alterar2">"><code>int numeros[5] = {10, 20, 30, 40, 50};
 
 // Acessando elementos
 printf("%d\n", numeros[0]); // Primeiro elemento (10)
@@ -166,7 +166,7 @@ numeros[1] = 25;</code></pre>
 
                 <h3>Ponteiros</h3>
                 <p>Um dos conceitos mais importantes em C:</p>
-                <pre class="bg-light p-3"><code>int var = 10;
+                <pre class=" alterar2">"><code>int var = 10;
 int *ptr = &var; // ptr armazena o endereço de var
 
 printf("Valor: %d\n", *ptr); // Acessa o valor através do ponteiro
@@ -197,4 +197,5 @@ printf("Valor: %d\n", *ptr); // Acessa o valor através do ponteiro
 </body>
 
 </html>
+
 
