--- a/pagjogos.html
+++ b/pagjogos.html
@@ -8,13 +8,11 @@
   <link rel="stylesheet" href="pagjogos.css">
 </head>
 <body>
-  <div class="container">
+  <header>
+    <h1>Manual do TI - Central de Jogos</h1>
+    <p>Escolha um dos testes abaixo e divirta-se aprendendo!</p>
+  </header>
 
-    <div class="header-card">
-          <h1>Manual do TI - Central de Jogos</h1>
-            <p>Escolha um dos testes abaixo e divirta-se aprendendo!</p>
-        <button class="btn" onclick="modoEscuro()" id="textmode">Modo escuro</button>
-    </div>
    
 
   <main class="fundo container">
@@ -102,4 +100,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
