--- a/loja.html
+++ b/loja.html
@@ -96,7 +96,7 @@
         </div>
 
         <div class="card col-12 col-md-6 col-lg-4 alterar2">
-            <img src="mouse.jpeg" class="card-img-top" alt="...">
+            <img src="mouse.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Mouse c/ fio Logitech M90 PretoMouse c/ fio Logitech M90 Preto</h5>
               <p class="card-text">R$35,72 </p>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="card col-12 col-md-6 col-lg-4 alterar2">
-            <img src="FONE.jpeg" class="card-img-top" alt="...">
+            <img src="FONE.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Headset Gamer Redragon Zeus Lite, P3, Preto - H510-LT</h5>
               <p class="card-text">R$ 149,99 </p>
