--- a/c++.html
+++ b/c++.html
@@ -33,7 +33,7 @@
                     <li>Inteligência artificial</li>
                 </ul>
                   <h3>Estrutura Básica de um Programa C++</h3>
-                <pre class="alterar">
+                <pre class="alterar2">
                 <code>
             #include &lt;iostream&gt;
 using namespace std;
@@ -213,5 +213,6 @@ meuCarro.mostrarInfo();</code></pre>
 </body>
 
 </html>
+
 
 
