--- a/pagjogos.html
+++ b/pagjogos.html
@@ -6,19 +6,23 @@
   <title>Central de Jogos - TI</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="pagjogos.css">
+    <script src="jogobancodados.js"></script>
 </head>
-<body>
-  <header>
-    <h1>Manual do TI - Central de Jogos</h1>
-    <p>Escolha um dos testes abaixo e divirta-se aprendendo!</p>
-  </header>
+<body class="alterar">
+  <div class="container">
+
+    <div class="header-card">
+        <h1>Manual de TI</h1>
+        <p>Todos os recursos técnicos em um só lugar</p>
+        <button class="btn" onclick="modoEscuro()" id="textmode">Modo escuro</button>
+    </div>
 
    
 
-  <main class="fundo container">
+  <main class="fundo container alterar2">
     <div class="row g-4">
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="card h-100 text-center rounded-2">
+        <div class="card h-100 text-center rounded-2 alterar2">
           <h3>Quiz de Hardware</h3>
           <p>Teste seus conhecimentos em peças de computador e montagem.</p>
           <a href="jogohardware.html" class="btn">Jogar</a>
@@ -26,7 +30,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="card h-100 text-center">
+        <div class="card h-100 text-center alterar2">
           <h3>Quiz de HTML</h3>
           <p>Descubra se você domina as bases da programação web!</p>
           <a href="jogohtml.html" class="btn">Jogar</a>
@@ -34,7 +38,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="card h-100 text-center">
+        <div class="card h-100 text-center alterar2">
           <h3>Quiz de C#</h3>
           <p>Desafie-se com perguntas para iniciantes em C#.</p>
           <a href="jogocsharp.html" class="btn">Jogar</a>
@@ -42,7 +46,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="card h-100 text-center">
+        <div class="card h-100 text-center alterar2">
           <h3>Quiz de C</h3>
           <p>Desafie-se com perguntas para iniciantes em C.</p>
           <a href="jogoc.html" class="btn">Jogar</a>
@@ -50,7 +54,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="card h-100 text-center">
+        <div class="card h-100 text-center alterar2">
           <h3>Quiz de Python</h3>
           <p>Desafie-se com perguntas para iniciantes em Python.</p>
           <a href="jogopython.html" class="btn">Jogar</a>
@@ -58,7 +62,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="card h-100 text-center">
+        <div class="card h-100 text-center alterar2">
           <h3>Quiz de CSS</h3>
           <p>Desafie-se com perguntas para iniciantes em CSS.</p>
           <a href="jogocss.html" class="btn">Jogar</a>
@@ -66,7 +70,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="card h-100 text-center">
+        <div class="card h-100 text-center alterar2">
           <h3>Quiz de Java</h3>
           <p>Desafie-se com perguntas para iniciantes em Java.</p>
           <a href="jogojava.html" class="btn">Jogar</a>
@@ -74,7 +78,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="card h-100 text-center">
+        <div class="card h-100 text-center alterar2">
           <h3>Quiz de javaScript</h3>
           <p>Desafie-se com perguntas para iniciantes em JavaScript.</p>
           <a href="jogojavascript.html" class="btn">Jogar</a>
@@ -82,7 +86,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="card h-100 text-center">
+        <div class="card h-100 text-center alterar2">
           <h3>Quiz de SQL</h3>
           <p>Desafie-se com perguntas para iniciantes em SQL.</p>
           <a href="jogobancodados.html" class="btn">Jogar</a>
@@ -93,6 +97,7 @@
     </div>
   </main>
   </div>
+</div>
   <footer>
     <p>&copy; 2025 - Manual do TI</p>
   </footer>
@@ -100,5 +105,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
