--- a/jogobancodados.html
+++ b/jogobancodados.html
@@ -5,12 +5,17 @@
   <title>Quiz – SQL/MySQL/Banco de Dados</title>
   <link rel="stylesheet" href="stylejogos.css">
 </head>
-<body>
-  <header>
-    <h1>Quiz de SQL/MySQL/Banco de Dados</h1>
-  </header>
-
+<body class="alterar">
   <div class="container">
+
+            <div class="header-card">
+                <h1>Quiz de SQL/MySQL/Banco de Dados</h1>
+                <button class="btn" onclick="modoEscuro()" id="textmode">Modo escuro</button>
+            </div>
+   
+  
+
+  <div class="container alterar2">
     <form id="quizForm">
 
       <div class="pergunta">
@@ -119,7 +124,7 @@
 
     <div id="resultado"></div>
   </div>
-
+  </div>
   <footer>
     <p>Quiz de SQL/MySQL/Banco de Dados</p>
   </footer>
@@ -127,3 +132,4 @@
   <script src="jogobancodados.js"></script>
 </body>
 </html>
+
