--- a/jogoc.html
+++ b/jogoc.html
@@ -5,12 +5,14 @@
   <title>Jogo – C</title>
   <link rel="stylesheet" href="stylejogos.css">
 </head>
-<body>
-  <header>
-    <h1>Quiz de C</h1>
-  </header>
-
+<body class="alterar">
   <div class="container">
+
+    <div class="header-card">
+    <h1>Quiz de C</h1>
+    </div>
+
+  <div class="container alterar2">
     <form id="quizForm">
 
       <div class="pergunta">
@@ -71,7 +73,7 @@
 
     <div id="resultado"></div>
   </div>
-
+  </div>
   <footer>
     <p>Quiz de C</p>
   </footer>
@@ -79,3 +81,4 @@
   <script src="jogoC.js"></script>
 </body>
 </html>
+
