--- a/jogocsharp.html
+++ b/jogocsharp.html
@@ -5,12 +5,14 @@
   <title>Jogo – C#</title>
   <link rel="stylesheet" href="stylejogos.css">
 </head>
-<body>
-  <header>
-    <h1>Quiz de C#</h1>
-  </header>
+<body class="alterar">
+   <div class="container">
 
-  <div class="container">
+   <div class="header-card">
+  <h1>Quiz de C#</h1>
+  </div>
+
+  <div class="container alterar2">
     <form id="quizForm">
 
       <div class="pergunta">
@@ -73,7 +75,7 @@
 
     <div id="resultado"></div>
   </div>
-
+   </div>
   <footer>
     <p>Quiz de C#</p>
   </footer>
@@ -81,3 +83,4 @@
   <script src="jogoCsharp.js"></script>
 </body>
 </html>
+
