--- a/jogocss.html
+++ b/jogocss.html
@@ -5,12 +5,14 @@
   <title>Jogo – CSS</title>
   <link rel="stylesheet" href="stylejogos.css">
 </head>
-<body>
-  <header>
-    <h1>Quiz de CSS</h1>
-  </header>
-
+<body class="alterar">
   <div class="container">
+
+  <div class="header-card">
+  <h1>Quiz de CSS</h1>
+  </div>
+
+  <div class="container alterar2">
     <form id="quizForm">
 
       <div class="pergunta">
@@ -75,7 +77,7 @@
 
     <div id="resultado"></div>
   </div>
-
+  </div>
   <footer>
     <p>Quiz de CSS</p>
   </footer>
@@ -83,3 +85,4 @@
   <script src="jogocss.js"></script>
 </body>
 </html>
+
