--- a/jogohardware.html
+++ b/jogohardware.html
@@ -5,12 +5,14 @@
   <title>Jogo – Hardware</title>
   <link rel="stylesheet" href="stylejogos.css">
 </head>
-<body>
-  <header>
-    <h1>Quiz de Hardware</h1>
-  </header>
-
+<body class="alterar">
   <div class="container">
+
+  <div class="header-card">
+    <h1>Quiz de Hardware</h1>
+  </div>
+
+  <div class="container alterar2">
     <form id="quizForm">
 
       <div class="pergunta">
@@ -77,7 +79,7 @@
 
     <div id="resultado"></div>
   </div>
-
+  </div>
   <footer>
     <p>Quiz de Hardware</p>
   </footer>
@@ -85,3 +87,4 @@
   <script src="jogoHardware.js"></script>
 </body>
 </html>
+
