--- a/jogohtml.html
+++ b/jogohtml.html
@@ -5,12 +5,14 @@
   <title>Jogo – HTML</title>
   <link rel="stylesheet" href="stylejogos.css">
 </head>
-<body>
-  <header>
-    <h1>Quiz de HTML</h1>
-  </header>
-
+<body class="alterar">
   <div class="container">
+
+    <div class="header-card">
+    <h1>Quiz de HTML</h1>
+  </div>
+
+  <div class="container alterar2">
     <form id="quizForm">
 
       <div class="pergunta">
@@ -81,7 +83,7 @@
 
     <div id="resultado"></div>
   </div>
-
+  </div>
   <footer>
     <p>Quiz de HTML</p>
   </footer>
@@ -89,3 +91,4 @@
   <script src="jogoHtml.js"></script>
 </body>
 </html>
+
