--- a/jogojavascript.html
+++ b/jogojavascript.html
@@ -5,12 +5,14 @@
   <title>Jogo – JavaScript</title>
   <link rel="stylesheet" href="stylejogos.css">
 </head>
-<body>
-  <header>
-    <h1>Quiz de JavaScript</h1>
-  </header>
+<body class="alterar">
+   <div class="container">
 
-  <div class="container">
+    <div class="header-card">
+    <h1>Quiz de JavaScript</h1>
+  </div>
+
+  <div class="container alterar2">
     <form id="quizForm">
 
       <div class="pergunta">
@@ -75,7 +77,7 @@
 
     <div id="resultado"></div>
   </div>
-
+   </div>
   <footer>
     <p>Quiz de JavaScript</p>
   </footer>
@@ -83,3 +85,4 @@
   <script src="jogoJavaScript.js"></script>
 </body>
 </html>
+
