--- a/jogoc.html
+++ b/jogoc.html
@@ -10,6 +10,7 @@
 
     <div class="header-card">
     <h1>Quiz de C</h1>
+      <button class="btn" onclick="modoEscuro()" id="textmode">Modo escuro</button>
     </div>
 
   <div class="container alterar2">
@@ -81,4 +82,5 @@
   <script src="jogoC.js"></script>
 </body>
 </html>
+
 
