--- a/jogocsharp.html
+++ b/jogocsharp.html
@@ -10,6 +10,7 @@
 
    <div class="header-card">
   <h1>Quiz de C#</h1>
+     <button class="btn" onclick="modoEscuro()" id="textmode">Modo escuro</button>
   </div>
 
   <div class="container alterar2">
@@ -83,4 +84,5 @@
   <script src="jogoCsharp.js"></script>
 </body>
 </html>
+
 
