--- a/jogohardware.html
+++ b/jogohardware.html
@@ -10,6 +10,7 @@
 
   <div class="header-card">
     <h1>Quiz de Hardware</h1>
+    <button class="btn" onclick="modoEscuro()" id="textmode">Modo escuro</button>
   </div>
 
   <div class="container alterar2">
@@ -87,4 +88,5 @@
   <script src="jogoHardware.js"></script>
 </body>
 </html>
+
 
