--- a/jogohtml.html
+++ b/jogohtml.html
@@ -10,6 +10,7 @@
 
     <div class="header-card">
     <h1>Quiz de HTML</h1>
+      <button class="btn" onclick="modoEscuro()" id="textmode">Modo escuro</button>
   </div>
 
   <div class="container alterar2">
@@ -91,4 +92,5 @@
   <script src="jogoHtml.js"></script>
 </body>
 </html>
+
 
