--- a/jogojavascript.html
+++ b/jogojavascript.html
@@ -10,6 +10,7 @@
 
     <div class="header-card">
     <h1>Quiz de JavaScript</h1>
+      <button class="btn" onclick="modoEscuro()" id="textmode">Modo escuro</button>
   </div>
 
   <div class="container alterar2">
@@ -85,4 +86,5 @@
   <script src="jogoJavaScript.js"></script>
 </body>
 </html>
+
 
