--- a/jogocsharp.html
+++ b/jogocsharp.html
@@ -81,7 +81,7 @@
     <p>Quiz de C#</p>
   </footer>
 
-  <script src="jogoCsharp.js"></script>
+  <script src="jogocsharp.js"></script>
 </body>
 </html>
 
