--- a/jogohardware.html
+++ b/jogohardware.html
@@ -85,7 +85,7 @@
     <p>Quiz de Hardware</p>
   </footer>
 
-  <script src="jogoHardware.js"></script>
+  <script src="jogohardware.js"></script>
 </body>
 </html>
 
