--- a/jogojavascript.html
+++ b/jogojavascript.html
@@ -83,7 +83,7 @@
     <p>Quiz de JavaScript</p>
   </footer>
 
-  <script src="jogoJavaScript.js"></script>
+  <script src="jogojavascript.js"></script>
 </body>
 </html>
 
