--- a/jogopython.html
+++ b/jogopython.html
@@ -83,7 +83,7 @@
     <p>Quiz de Python</p>
   </footer>
 
-  <script src="jogoPython.js"></script>
+  <script src="jogopython.js"></script>
 </body>
 </html>
 
