--- a/jogohtml.html
+++ b/jogohtml.html
@@ -89,7 +89,7 @@
     <p>Quiz de HTML</p>
   </footer>
 
-  <script src="jogoHtml.js"></script>
+  <script src="jogohtml.js"></script>
 </body>
 </html>
 
