--- a/jogojava.html
+++ b/jogojava.html
@@ -5,7 +5,7 @@
   <title>Jogo – Java</title>
   <link rel="stylesheet" href="stylejogos.css">
 </head>
-<body>
+<body class="alterar">
   <div class="container">
 
   <div class="header-card">
@@ -14,7 +14,7 @@
   </div>
 
 
-  <div class="container">
+  <div class="container alterar2">
     <form id="quizForm">
 
       <div class="pergunta">
@@ -83,3 +83,4 @@
   <script src="jogojava.js"></script>
 </body>
 </html>
+
